--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,10 +25,10 @@ dependencies:
   cupertino_icons: ^0.1.2
   camera: 0.5.0
   path_provider: 0.5.0+1
-  image: 2.0.7
-  cryptoutils: ^0.4.0
-  collection: ^1.14.11
   firebase_storage:
+  location: ^1.4.1
+  image_picker: ^0.4.12
+  intl: ^0.15.8
 
 
 dev_dependencies:
