--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   path_provider: 0.5.0+1
   firebase_storage:
   tuple: ^1.0.2
+  random_string: ^0.0.2
   location: ^1.4.1
   image_picker: ^0.4.12
   intl: ^0.15.8
